# filesystem-standalone

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
elib/filesystem/v2/: config.hpp  directory_entry.hpp  directory_iterator.hpp  file_status.hpp  filesystem_error.hpp  operations.hpp  path.hpp
elib/filesystem/v2/detail/: path_converter.hpp
src/filesystem/v2/: directory_iterator.cpp  operations.cpp  path.cpp
unit_tests/: directory_entry_test.cpp  file_status_test.cpp
